# Polyclinic

./: .gitignore  .gitmodules  CMakeLists.txt  create_update_app_folder.sh
PSQL/: create_functions.psql  create_tables_query.pgsql  create_tables_query.psql  create_triggers.psql  create_view.psql  feel_test_tables_query.psql  queries.psql
app/: Dockerfile  docker-compose.yml  polyclinic_server
app/common/: Makefile  cmake_install.cmake
app/common/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
app/common/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
app/common/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
app/common/jsoncpp/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
app/common/jsoncpp/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
app/common/jsoncpp/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
app/common/jsoncpp/src/jsontestrunner/: CTestTestfile.cmake  Makefile  cmake_install.cmake  jsontestrunner_exe
app/common/jsoncpp/src/lib_json/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libjsoncpp.so.1.9.5
app/common/jsoncpp/src/test_lib_json/: CTestTestfile.cmake  Makefile  cmake_install.cmake  jsoncpp_test
app/common/plog/: Makefile  cmake_install.cmake
app/database/: Dockerfile
app/frontend_web/: index.html
app/frontend_web/bars/: top_bar.css  topbar.css
app/frontend_web/book_doc/: style.css
app/frontend_web/profile_page/: profile.html
app/frontend_web/profile_page/allergens/: allergens.js  index.html  style.css
app/frontend_web/profile_page/analyses/: analyses.js  index.html
app/frontend_web/profile_page/appointments/: appointments.js  style.css
app/frontend_web/profile_page/booked_doctors/: booked_doctors.js  style.css
app/frontend_web/profile_page/prescription_drugs/: index.html  prescription_drugs.js
app/frontend_web/scripts/: auth.js  book_doc.js  prescription_drugs.js
common/: CMakeLists.txt
database/: database-init.sql
doc/: datagrams.mdj  network_logic.mdj
frontend_web/: index.html  styles.css
frontend_web/bars/: top_bar.html  topbar.html  topbar.js
frontend_web/book_doc/: index.html
frontend_web/profile_page/: index.html  profile.css  profile.html  registration.css  registration.html  signin.css  signin.html
frontend_web/profile_page/analyses/: style.css
frontend_web/profile_page/appointments/: index.html
frontend_web/profile_page/booked_doctors/: index.html
frontend_web/profile_page/prescription_drugs/: style.css
frontend_web/scripts/: allergens.js  analyses.js  appointments.js  auth.js  book_doc.js  booked_doctors.js  include.js  profile.js  redirect.js
logger/: CMakeLists.txt
logger/include/: Logger.hpp
logger/src/: Logger.cpp
server/: CMakeLists.txt  main.cpp
server/common/: CMakeLists.txt  Signal  Slot  config.hpp
server/common/include/: EnumStringConvertor.hpp  File.hpp  HttpHeaders.hpp  Signal.hpp  Slot.hpp  Socket.hpp  config.hpp
server/common/src/: EnumStringConvertor.cpp  File.cpp  HttpHeaders.cpp  Signal.cpp  Slot.cpp  Socket.cpp
server/db/: CMakeLists.txt
server/db/include/: DBQuery.hpp
server/db/src/: DBQuery.cpp
server/server/: CMakeLists.txt
server/server/ClientHandler/: CMakeLists.txt
server/server/ClientHandler/controllers/: CMakeLists.txt
server/server/ClientHandler/controllers/include/: ClientHandlerController.hpp
server/server/ClientHandler/controllers/src/: ClientHandlerController.cpp
server/server/ClientHandler/models/: CMakeLists.txt
server/server/ClientHandler/models/include/: ClientHandlerModel.hpp  IClientHandlerModel.hpp
server/server/ClientHandler/models/src/: ClientHandlerModel.cpp
server/server/ClientHandler/view/: CMakeLists.txt
server/server/ClientHandler/view/include/: ClientHandlerInterface.hpp  IClientHandlerInterface.hpp
server/server/ClientHandler/view/src/: ClientHandlerInterface.cpp
server/server/ContextHandler/: CMakeLists.txt
server/server/ContextHandler/controllers/: CMakeLists.txt
server/server/ContextHandler/controllers/include/: ContextHandlerController.hpp
server/server/ContextHandler/controllers/src/: ContextHandlerController.cpp
server/server/ContextHandler/models/: CMakeLists.txt
server/server/ContextHandler/models/include/: ContextHandlerModel.hpp  IContextHandlerModel.hpp
server/server/ContextHandler/models/src/: ContextHandlerModel.cpp
server/server/ContextHandler/view/: CMakeLists.txt
server/server/ContextHandler/view/include/: ContextHandlerInterface.hpp  IContextHandlerInterface.hpp
server/server/ContextHandler/view/src/: ContextHandlerInterface.cpp
server/server/ServerStarter/: CMakeLists.txt
server/server/ServerStarter/controllers/: CMakeLists.txt
server/server/ServerStarter/controllers/include/: ServerStarterController.hpp
server/server/ServerStarter/controllers/src/: ServerStarterController.cpp
server/server/ServerStarter/models/: CMakeLists.txt
server/server/ServerStarter/models/include/: IServerStarterModel.hpp  ServerStarterModel.hpp
server/server/ServerStarter/models/src/: ServerStarterModel.cpp
server/tests/: CMakeLists.txt  testRunner.cpp
